# faceswap

./: .gitignore  INSTALLATION.md  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml   quick-install.sh  requirements-dev.txt  requirements-gpu.txt  requirements.txt   setup.cfg  setup.py  uninstall.sh
src/face_swap_advanced/: __init__.py  cli.py  face_restorer.py  face_swap.py
