[metadata]
name = face-swap-advanced
version = attr: face_swap_advanced.__version__
author = Face Swap Developer
author_email = developer@example.com
description = Advanced face swapping tool with anomaly detection and similarity filtering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teguh87/face-swap-advanced
project_urls =
    Bug Tracker = https://github.com/teguh87/face-swap-advanced/issues
    Documentation = https://face-swap-advanced.readthedocs.io/
    Source Code = https://github.com/teguh87/face-swap-advanced
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Video
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python>=4.7.0
    numpy>=1.21.0
    tqdm>=4.64.0
    onnxruntime>=1.15.0
    insightface>=0.7.3
    pathlib2>=2.3.7; python_version<"3.4"
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
gpu =
    onnxruntime-gpu>=1.15.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
all =
    onnxruntime-gpu>=1.15.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0

[options.entry_points]
console_scripts =
    face-swap = face_swap_advanced.cli:main
    faceswap = face_swap_advanced.cli:main

[options.package_data]
face_swap_advanced = models/*.onnx, config/*.json, *.md

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[egg_info]
tag_build = 
tag_date = 0